--- a/bitterDialog/src/main/res/layout/alert_dialog.xml
+++ b/bitterDialog/src/main/res/layout/alert_dialog.xml
@@ -73,7 +73,7 @@
             android:layout_height="match_parent"
             android:background="@drawable/success_circle" />
 
-        <cn.pedant.SweetAlert.SuccessTickView
+        <com.example.mylibrary.SuccessTickView
             android:id="@+id/success_tick"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
@@ -109,7 +109,7 @@
         android:orientation="vertical"
         android:visibility="gone">
 
-        <com.pnikosis.materialishprogress.ProgressWheel
+        <com.example.mylibrary.ProgressWheel
             android:id="@+id/progressWheel"
             android:layout_width="80dp"
             android:layout_height="80dp"
